--- a/templates/client/reports/dashboard.html
+++ b/templates/client/reports/dashboard.html
@@ -207,9 +207,9 @@
                     <i class="material-icons">save</i>
                     Sauvegarder Vue
                 </button>
-                <button class="btn btn-primary">
-                    <i class="material-icons">add</i>
-                    Nouveau Report
+                <button class="btn btn-primary" onclick="window.location.href='/client/reports/matrix-builder/'">
+                    <i class="material-icons">auto_awesome</i>
+                    Nouveau Matrix Report
                 </button>
             </div>
         </div>
