Latest Commit II

--- a/templates/client/dashboard.html
+++ b/templates/client/dashboard.html
@@ -19,7 +19,7 @@
         
         <div class="module-card">
             <i class="material-icons">assignment</i>
-            <h3>Home</h3>
+            <h3>HOME</h3>
             <p>Bientôt disponible</p>
         </div>
         
@@ -44,7 +44,7 @@
         </div>
         <div class="module-card active">
             <i class="material-icons">assessment</i>
-            <h3>Submissions</h3>
+            <h3>SUBMISSIONS</h3>
             <p>Disponible maintenant</p>
             <a href="/submissions/" class="btn btn-primary">Accéder</a>
         </div>
